# kip

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  main.cpp  test.cpp  testKipCapitalize.cpp
src/kip/: CMakeLists.txt  kip.cpp  kip.h  kipstring.cpp  kipstring.h
